[gd_scene load_steps=10 format=3 uid="uid://ddp8ihfe7dk8f"]

[ext_resource type="Script" uid="uid://cc084nb0xecu8" path="res://screens/start_menus/main_menu/account_and_achievements_popup/account_menu/delete_user_popup/delete_user_popup.gd" id="1_afkjy"]
[ext_resource type="Texture2D" uid="uid://d27de7hiu47rq" path="res://screens/start_menus/main_menu/account_and_achievements_popup/account_menu/delete_user_popup/assets/delete_account_background.png" id="1_wyrb8"]
[ext_resource type="FontFile" uid="uid://ns85otisc51h" path="res://global_assets/fonts/Boldstone-Regular.ttf" id="2_wyrb8"]
[ext_resource type="PackedScene" uid="uid://lg5qdekhnaus" path="res://screens/start_menus/main_menu/account_and_achievements_popup/account_menu/delete_user_popup/delete_user_item/delete_user_item.tscn" id="4_sqmgt"]
[ext_resource type="Texture2D" uid="uid://d3ht1dr6r2d46" path="res://screens/start_menus/main_menu/account_and_achievements_popup/account_menu/assets/empty_button.png" id="4_y0ngc"]
[ext_resource type="Texture2D" uid="uid://sa5nwsglbrfr" path="res://screens/start_menus/main_menu/account_and_achievements_popup/account_menu/assets/empty_button_selected.png" id="5_sqmgt"]

[sub_resource type="ButtonGroup" id="ButtonGroup_sqmgt"]

[sub_resource type="ButtonGroup" id="ButtonGroup_gixne"]

[sub_resource type="ButtonGroup" id="ButtonGroup_hnwca"]

[node name="DeleteUserPopup" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_afkjy")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_wyrb8")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 299.0
offset_top = 80.0
offset_right = 720.0
offset_bottom = 152.0
theme_override_fonts/font = ExtResource("2_wyrb8")
theme_override_font_sizes/font_size = 90
text = "DELETE USER"

[node name="UserListItemsContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 271.0
offset_top = 203.0
offset_right = 773.0
offset_bottom = 500.0
theme_override_constants/separation = 30

[node name="DeleteUserItem" parent="UserListItemsContainer" instance=ExtResource("4_sqmgt")]
layout_mode = 2
button_pressed = true
button_group = SubResource("ButtonGroup_sqmgt")

[node name="DeleteUserItem2" parent="UserListItemsContainer" instance=ExtResource("4_sqmgt")]
layout_mode = 2
button_group = SubResource("ButtonGroup_gixne")

[node name="DeleteUserItem3" parent="UserListItemsContainer" instance=ExtResource("4_sqmgt")]
layout_mode = 2
button_group = SubResource("ButtonGroup_hnwca")

[node name="WarningLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 58.0
offset_top = 554.0
offset_right = 1010.0
offset_bottom = 594.0
theme_override_colors/font_color = Color(0.721569, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_wyrb8")
theme_override_font_sizes/font_size = 60
text = "there is no warning"
horizontal_alignment = 1

[node name="AcceptBtn" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 186.0
offset_top = 634.0
offset_right = 492.0
offset_bottom = 701.0
texture_normal = ExtResource("4_y0ngc")
texture_pressed = ExtResource("5_sqmgt")
texture_hover = ExtResource("5_sqmgt")
texture_focused = ExtResource("5_sqmgt")

[node name="Label" type="Label" parent="AcceptBtn"]
layout_mode = 0
offset_left = 82.0
offset_top = 16.0
offset_right = 217.0
offset_bottom = 56.0
theme_override_fonts/font = ExtResource("2_wyrb8")
theme_override_font_sizes/font_size = 45
text = "Accept"

[node name="CancelBtn" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 578.0
offset_top = 634.0
offset_right = 884.0
offset_bottom = 701.0
texture_normal = ExtResource("4_y0ngc")
texture_pressed = ExtResource("5_sqmgt")
texture_hover = ExtResource("5_sqmgt")
texture_focused = ExtResource("5_sqmgt")

[node name="Label" type="Label" parent="CancelBtn"]
layout_mode = 0
offset_left = 82.0
offset_top = 16.0
offset_right = 217.0
offset_bottom = 56.0
theme_override_fonts/font = ExtResource("2_wyrb8")
theme_override_font_sizes/font_size = 45
text = "Cancel"

[connection signal="pressed" from="AcceptBtn" to="." method="_on_accept_btn_pressed"]
[connection signal="pressed" from="CancelBtn" to="." method="_on_cancel_btn_pressed"]
